--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.17",
     "@chakra-ui/react": "^1.7.1",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
+    "apollo-server": "^3.5.0",
+    "apollo-server-micro": "^3.5.0",
+    "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
+    "graphql": "^15.7.2",
+    "micro-cors": "^0.1.1",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -19,6 +25,7 @@
     "react-slick": "^0.28.1"
   },
   "devDependencies": {
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
     "@types/react-slick": "^0.23.7",
