--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@apollo/client": "^3.4.17",
@@ -25,12 +26,15 @@
     "react-slick": "^0.28.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^12.1.2",
     "@types/micro-cors": "^0.1.2",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
     "@types/react-slick": "^0.23.7",
+    "babel-jest": "^27.3.1",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3",
+    "jest": "^27.3.1",
     "typescript": "4.4.4"
   }
 }
